        (Revert this code back to v4_10_1 if need be.)
QUICKEXTRACT: Apply a work-around to the apparent change in PHOTO fiber-mags,
        as discussed in sdss-obs/4029 and PR #5642.  Shift the mags at
        which to evaluate the S/N from:
          mag=20.20 -> 20.33 in blue
          mag=19.90 -> 20.06 in red
SPREDUCE1D: Add the "UNPLUGGED" value to the ZWARNING flag.

etc/atmdisp_vec_am1.1.see2.0.fit - Tremonti's atmos. dispersion corrrection?
etc/atmdisp_vec_am1.2.see2.0.fit - Tremonti's atmos. dispersion corrrection?
etc/atmdisp_vec_am1.3.see2.0.fit - Tremonti's atmos. dispersion corrrection?
etc/atmdisp_vec_am1.4.see2.0.fit - Tremonti's atmos. dispersion corrrection?
etc/atmdisp_vec_am1.5.see2.0.fit - Tremonti's atmos. dispersion corrrection?
etc/emlines.par: The [O_II] lines were updated from Peter van Hoof's web
           site at: http://www.pa.uky.edu/~peter/atomic/
etc/kurucz_stds_v5.fit: Made with new SPECTRUM code.  Use white dwarf
           correction to colors.
etc/kurucz_model_fix.fit (removed)
etc/kurucz_stds_interp.fit (removed)
etc/spChunkList.par: Add chunks 28A, 71, 68A.
pro/Makefile: Add the plan subdirectory.
ups/idlspec2d.table: Get rid of all the $UPS_PROD_FLAVOR references for 
           dependent products.

-------------------------------------------------------------------------------
v4_10_1 (Jun 18, 2003 idlspec2d running on IDL 5.3 - 5.5
Built against specflat v1_5, elodie v1_0, idlutils v4_10_1.

Builds spAll summary files using Princeton calibObj files.

DJS_SVDFIT: This proc removed, since it was a temporary fix to
           be called for solving a singular matrix from FIND_NMINIMA.
FIND_NMINIMA: Remove use of DJS_SVDFIT (which didn't work on the Mac
           anyway).  Re-write the fitting to exactly three points
           with an explicit solution of the quadratic equation.
           Add another error code (-7L) for the case where all of the Y
           values are identical, in which case the fit is impossible.